:repeat: fixed center alignement of posters

--- a/src/App.css
+++ b/src/App.css
@@ -138,6 +138,7 @@ html {
   flex-direction: row;
   flex-wrap: wrap;
   margin-top: 34px;
+  justify-content: center;
 }
 
 @media (max-width: 828px) {
